--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
+    "firebase-admin": "^13.6.1",
     "jose": "^5.2.0",
     "next": "14.0.4",
     "react": "^18.2.0",
@@ -18,10 +19,10 @@
     "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/better-sqlite3": "^7.6.8",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
