Deploy with Firebase env vars

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,3 @@
-# Mission Control - Environment Variables
-# Copy this to .env.local
+FIREBASE_PROJECT_ID=mission-board-70cab
+FIREBASE_CLIENT_EMAIL=firebase-adminsdk-fbsvc@mission-board-70cab.iam.gserviceaccount.com
 
-# REQUIRED: Access password for login
-MISSION_PASSWORD=nb3.u3_!CnN6RLy6UpW
-
-# Optional: Environment
-NODE_ENV=development
